--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,10 @@ version: '3'
 services:
 
     app:
-        build:
-            context: .
-            dockerfile: Dockerfile
+        # build:
+        #     context: .
+        #     dockerfile: Dockerfile
+        image: silviotmalmeida/frontend-user-portal-app
         container_name: frontend-user-portal-app
         tty: true
         volumes:
